--- a/index.css
+++ b/index.css
@@ -1125,6 +1125,7 @@ span[contenteditable="true"] {
     line-height: 1.5;
     white-space: pre-wrap;
     word-wrap: break-word;
+    word-break: break-word;
     color: var(--text-dark);
 }
 .post-text.align-left { text-align: left; }
